Implement renderMeme() getMeme() setLineText() renderGallery() and onImgSelect()

--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -5,3 +5,8 @@
 /* BASICS */
 @import url('./basics/base.css');
 @import url('./basics/layout.css');
+
+/*COMPONENTS*/
+@import url('./components/tools.css');
+@import url('./components/editor.css');
+@import url('./components/gallery.css');
