--- a/css/styles/basics/base.css
+++ b/css/styles/basics/base.css
@@ -3,7 +3,22 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     background-color: var(--crl-primary-1);
+}
+
+header {
+    display: flex;
+    align-items: center;
+    margin-block-start: 3px;
+
+    width: 90vw;
+    height: 76px;
+    align-self: center;
+    border-radius: 50px;
+
+    background: linear-gradient(90deg, #109cb1 0%, #3dc981 80%);
 }
 
 main {
@@ -13,17 +28,11 @@ main {
 }
 
 canvas {
-    border: 2px solid gray;
+    border: 5px solid var(--clr-tools-bg);
     border-radius: 25px;
 }
 
-img {
-    width: 300px;
-    border-radius: 20px;
-    box-shadow: 0 1px 10px rgba(223, 223, 223, 0.4);
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
+
 
 .gallery img:hover {
     transform: scale(1.03);
@@ -31,4 +40,5 @@ img {
 
 a {
     color: white;
+    text-decoration: none;
 }
