--- a/css/styles/setup/fonts.css
+++ b/css/styles/setup/fonts.css
@@ -1,9 +1,14 @@
 @font-face {
     font-family: largeImpact;
-    src: url(/fonts/Super_Impacto.otf)
+    src: url(/fonts/Super_Impacto.otf);
 }
 
 @font-face {
     font-family: lato;
-    src: url(/fonts/Lato/Lato-Regular.ttf)
+    src: url(/fonts/Lato/Lato-Regular.ttf);
+}
+
+@font-face {
+    font-family: archivoBlack;
+    src: url(/fonts/Archivo_Black/ArchivoBlack-Regular.ttf);
 }
