--- a/css/styles/components/tools.css
+++ b/css/styles/components/tools.css
@@ -14,7 +14,7 @@
     border-radius: 25px;
     background-color: var(--clr-tools-bg);
 
-    font-family: lato;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 input.text {
