--- a/css/styles/components/editor.css
+++ b/css/styles/components/editor.css
@@ -8,5 +8,5 @@
     gap: 70px;
 
     margin-block-start: 30px;
-    font-family: archivoBlack;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
