--- a/css/styles/components/tools.css
+++ b/css/styles/components/tools.css
@@ -22,16 +22,17 @@ input.text {
     width: 400px;
     padding: 10px;
 
-    margin-block-start: 20px;
+    margin-block-start: 26px;
+    margin-block-end: 10px;
 
     border-radius: 20px;
     border: 1px solid lightgrey;
     background-color: #d8d7d7;
 
-    font-family: lato;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 600;
     text-align: center;
     color: white;
 
@@ -39,6 +40,10 @@ input.text {
         0px -3px 1px #fbffff,
         0px 3px 1px #adb6c2;
     transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+input.text:focus {
+    outline: none;
 }
 
 .tools button {
@@ -119,11 +124,17 @@ button:hover {
     border: none;
 
     font-size: 20px;
-    font-family: lato;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    ;
 }
 
 
 .stickers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
     width: 447px;
     height: 80px;
     padding: 10px;
@@ -133,7 +144,8 @@ button:hover {
 }
 
 .stickers img {
-    width: 60px;
+    display: block;
+    width: 55px;
 }
 
 .links {
@@ -151,8 +163,7 @@ button:hover {
     border-radius: 20px;
     background-color: #8F44BB;
 
-    font-size: 21px;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    font-size: 24px;
 
     box-shadow:
         0px -5px 1px #ad62d8,
@@ -171,8 +182,8 @@ button:hover {
     height: 50px;
 
     color: white;
-    font-family: lato;
-    font-size: 21px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
 
     border-radius: 20px;
 
