--- a/css/styles/components/header.css
+++ b/css/styles/components/header.css
@@ -1,4 +1,27 @@
 header img {
+    display: block;
     width: 220px;
     margin-inline-start: 40px;
+}
+
+header button {
+    border: none;
+    background-color: transparent;
+
+    color: white;
+    font-size: 23px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    cursor: pointer;
+}
+
+button.active {
+    border-bottom: 2px solid white;
+}
+
+header .buttons {
+    display: flex;
+    gap: 63px;
+
+    margin-inline-end: 100px;
 }
