--- a/css/styles/components/header.css
+++ b/css/styles/components/header.css
@@ -5,6 +5,7 @@ header img {
 }
 
 header button {
+    position: relative;
     border: none;
     background-color: transparent;
 
@@ -15,8 +16,16 @@ header button {
     cursor: pointer;
 }
 
-button.active {
-    border-bottom: 2px solid white;
+button.active::after {
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    display: block;
+
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
 }
 
 header .buttons {
