--- a/css/styles/components/gallery.css
+++ b/css/styles/components/gallery.css
@@ -30,9 +30,46 @@
     box-shadow: 0 1px 10px rgba(223, 223, 223, 0.4);
     cursor: pointer;
     transition: transform 0.3s ease;
-
 }
 
-.gallery img:hover {
+.gallery img:hover,
+.custom-file-label:hover {
     transform: scale(1.03);
+}
+
+.add-img-btn {
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(127, 127, 127);
+
+    color: white;
+    font-size: 50px;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.plus-icon {
+    margin-block-start: 70px;
+}
+
+.custom-file-label span {
+    font-size: 18px;
+}
+
+input.file-input {
+    display: none;
+}
+
+.custom-file-label {
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(127, 127, 127);
+
+    color: white;
+    font-size: 50px;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
+
+    transition: transform 0.3s ease;
 }
