--- a/css/styles/components/tools.css
+++ b/css/styles/components/tools.css
@@ -67,22 +67,31 @@ input.text:focus {
 
 .tools-row-1>* {
     color: white;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+
 }
 
 .switch-line-btn {
-    background: linear-gradient(145deg, #3BAECC, #3b8dc6);
-    box-shadow: 0px 3px 1px #0F7A85;
+    height: 48px !important;
+    background-color: #37ACCB;
+    box-shadow:
+        0px -4px 1px#48c4e3,
+        0px 4px 1px #408a9b;
 }
 
 .add-line-btn {
-    background: linear-gradient(145deg, #40DF58, #48b74e);
-    box-shadow: 0px 3px 1px#076936;
+    height: 48px !important;
+    background-color: #40DF58;
+    box-shadow:
+        0px -4px 1px#73f18a,
+        0px 4px 1px#076936;
 }
 
 .delete-line-btn {
-    background: linear-gradient(145deg, #E33D36, #d65353);
-    box-shadow: 0px 3px 1px#8C0606;
+    height: 48px !important;
+    background-color: #E43E36;
+    box-shadow:
+        0px -4px 1px#ED665B,
+        0px 4px 1px#8C0606;
 }
 
 button:hover {
@@ -201,4 +210,12 @@ button:hover {
 
 .btn-facebook i {
     margin-inline-end: 10px;
+}
+
+.tools-saved-btn {
+    background-color: #53c859;
+    box-shadow:
+        0px -4px 1px#5cda73,
+        0px 4px 1px#096e3a;
+    color: white;
 }
