--- a/css/styles/components/saved-memes.css
+++ b/css/styles/components/saved-memes.css
@@ -31,3 +31,12 @@
     cursor: pointer;
     transition: transform 0.3s ease;
 }
+
+.saved-memes p {
+    margin: 0;
+    width: 100%;
+    font-size: 25px;
+    text-align: left;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
