--- a/css/styles/components/header.css
+++ b/css/styles/components/header.css
@@ -16,16 +16,15 @@ header button {
     cursor: pointer;
 }
 
-button.active::after {
-    content: '';
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    display: block;
-
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
+button.active {
+    background-color: white;
+    border: none;
+    padding: 6px 20px;
+    border-radius: 30px;
+    font-size: 20px;
+    color: #2FBA75;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 }
 
 header .buttons {
