--- a/css/styles/components/gallery.css
+++ b/css/styles/components/gallery.css
@@ -4,6 +4,7 @@
 
 .gallery {
     display: flex;
+    flex-direction: column;
     justify-content: center;
 
     width: 80vw;
@@ -77,15 +78,16 @@ input.file-input {
 
 .filter {
     position: relative;
+    height: 61px;
 
 }
 
 input.list {
     position: relative;
 
-    height: 61px;
+    width: 100%;
+    height: 100%;
     padding: 20px;
-    margin-block-end: 40px;
 
     border-radius: 30px;
     border: none;
@@ -99,9 +101,22 @@ input.list {
 
 .search-img {
     position: absolute;
-    display: block;
+    top: 50%;
+    /* Center vertically */
+    right: 20px;
+    /* Position the icon 20px from the right side of .filter */
+    transform: translateY(-50%);
     width: 20px;
 
-
     background-color: #22252C;
+}
+
+.keywords {
+    height: 48px;
+    padding: 20px;
+    margin-block-end: 40px;
+    margin-block-start: 6.5px;
+
+    background-color: #87898D;
+    border-radius: 30px;
 }
