--- a/css/styles/components/header.css
+++ b/css/styles/components/header.css
@@ -16,7 +16,7 @@ header button {
     cursor: pointer;
 }
 
-button.active {
+button.open {
     background-color: white;
     border: none;
     padding: 6px 20px;
