--- a/css/styles/basics/base.css
+++ b/css/styles/basics/base.css
@@ -14,6 +14,7 @@ header {
     justify-content: space-between;
     margin: 10px auto;
 
+    max-width: 1800px;
     height: 76px;
     align-self: center;
 
