--- a/css/styles/components/gallery.css
+++ b/css/styles/components/gallery.css
@@ -81,15 +81,17 @@ input.file-input {
     justify-content: center;
 }
 
+.filter-container {
+    display: flex;
+    width: 100%;
+}
+
 .filter {
     position: relative;
     height: 61px;
-
 }
 
 input.list {
-    position: relative;
-
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -117,6 +119,7 @@ input.list {
 .keywords-container {
     display: flex;
     gap: 10px;
+    margin-inline-start: 20px;
 }
 
 .keywords {
@@ -148,4 +151,20 @@ input.list {
     background-color: transparent;
     color: #29B481;
     font-size: 25px;
+}
+
+.flexible-btn {
+    margin-block-start: 15px;
+    width: 100px;
+    height: 40px;
+
+    border: none;
+    border-radius: 20px;
+    background-color: #15A1A7;
+
+    color: white;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
