Update font-family import path for largeImpact

--- a/css/styles/setup/fonts.css
+++ b/css/styles/setup/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: largeImpact;
-    src: url(/fonts/Super_Impacto.otf);
+    src: url(../../../fonts/Super_Impacto.otf);
 }
 
 @font-face {
