--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -13,3 +13,4 @@
 @import url('./components/gallery.css');
 @import url('./components/saved-memes.css');
 @import url('./components/header.css');
+@import url('./components/canvas-container.css');
