--- a/css/styles/components/canvas-container.css
+++ b/css/styles/components/canvas-container.css
@@ -3,5 +3,5 @@
 }
 
 .canvas-container {
-    font-family: largeImpact;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
