--- a/css/styles/components/gallery.css
+++ b/css/styles/components/gallery.css
@@ -5,13 +5,12 @@
 .gallery {
     display: flex;
     flex-direction: column;
-    justify-content: center;
 
     width: 80vw;
     max-width: 1600px;
     padding: 20px;
     margin: auto;
-    margin-block-start: 20px;
+
     margin-block-end: 30px;
 
     border-radius: 20px;
@@ -24,6 +23,8 @@
     grid-template-columns: repeat(auto-fit, 200px);
     gap: 1em;
     justify-content: center;
+    align-self: center;
+    width: 100%;
 }
 
 .img-container img {
@@ -94,7 +95,7 @@ input.file-input {
 input.list {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 30px;
 
     border-radius: 30px;
     border: none;
@@ -109,7 +110,7 @@ input.list {
 .search-img {
     position: absolute;
     top: 50%;
-    right: 20px;
+    right: 30px;
     transform: translateY(-50%);
     width: 20px;
 
@@ -118,18 +119,10 @@ input.list {
 
 .keywords-container {
     display: flex;
-    gap: 10px;
-
 }
 
 .keywords {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 48px;
-    padding: 20px;
-    margin-block-end: 40px;
-    margin-block-start: 6.5px;
 
     background-color: #87898D;
     border-radius: 30px;
@@ -145,7 +138,6 @@ input.list {
 }
 
 .clear-filter-btn {
-
     border: none;
     background-color: transparent;
     color: #29B481;
@@ -153,7 +145,6 @@ input.list {
 }
 
 .flexible-btn {
-    margin-block-start: 15px;
     width: 100px;
     height: 40px;
 
