--- a/css/styles/setup/mq.css
+++ b/css/styles/setup/mq.css
@@ -4,8 +4,12 @@
     }
 
     header {
-        width: 100vw;
-        margin: 0;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+
+        z-index: 999;
     }
 
     .editor {
@@ -16,14 +20,16 @@
 
     header .buttons {
         position: fixed;
-        flex-direction: column;
-
-        top: 86px;
+        top: 76px;
         right: -100px;
-        background-color: var(--clr-tools-bg);
-        padding: 10px;
+
+        flex-direction: column;
         gap: 10px;
 
+        height: 100vh;
+        padding: 10px;
+
+        background-color: var(--clr-tools-bg);
         box-shadow: -8px 0px 13px rgb(0 0 0 / 20%);
         transform: translateX(100%);
     }
@@ -42,11 +48,6 @@
         z-index: 111;
     }
 
-    .filter,
-    .keywords {
-        width: 100%;
-    }
-
     input.list {
         width: 100%;
         margin-block-end: 0;
@@ -61,32 +62,57 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 5px;
+        gap: 15px;
     }
 
     .filter-container {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 18px;
 
         width: 100%;
     }
 
     .gallery {
+        margin-block-start: 100px !important;
         gap: 30px;
     }
 
     .keywords-container {
         height: 60px;
+        gap: 5px;
+        justify-content: center;
     }
 
     .keywords {
+        display: grid;
+        grid-template-columns: repeat(3, 50px);
+        grid-template-rows: repeat(2, 1fr);
         font-size: 1rem;
+
+        justify-content: center;
+        align-self: center;
+        min-width: 190px;
+        max-width: 300px;
+        width: 100%;
     }
 
 }
 
+
 @media (min-width: 801px) {
+    body {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    header {
+        width: 90vw;
+        border-radius: 100vh;
+        margin: 15px auto;
+    }
+
     .hamburger {
         display: none;
     }
@@ -105,35 +131,72 @@
         width: 100%;
     }
 
-    .clear-filter-btn {
-        margin-block-start: -25px;
+    .filter {
+        width: 460px;
+        align-self: flex-start;
+    }
+
+    .keywords-container {
+        gap: 10px;
+        width: 100%;
+        margin-block-end: 40px;
+        margin-block-start: 7px;
+    }
+
+    .keywords {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        width: 400px;
+
+        padding: 20px;
+        margin-inline-start: 10px;
+    }
+
+    .flexible-btn-container {
+        margin-block-start: 12px;
+    }
+
+}
+
+@media (min-width: 1300px) {
+    .filter-elements {
+        justify-content: space-between;
+    }
+
+    .filter-container {
+        flex-direction: row;
+        gap: 20px;
+        width: 100%;
     }
 
     .filter {
         width: 100%;
+        height: 100%;
     }
 
+    .flexible-btn-container {
+        justify-items: end;
+    }
 }
 
-@media (min-width:800px) {}
-
-@media (min-width: 1200px) {
-    .filter-container {
+@media (min-width: 1500px) {
+    .filter-elements {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 10px;
+        justify-content: space-between;
+    }
+
+    .filter-container {
+        width: 1050px;
     }
 
     .filter {
-        width: 400px;
-        height: 100%;
-
-        margin-block-start: -32px;
+        width: 700px;
     }
 }
 
-@media (min-width: 1380px) {
+@media (min-width: 1700px) {
     .filter-elements {
         display: flex;
         justify-content: space-between;
@@ -141,5 +204,9 @@
 
     .filter-container {
         width: 100%;
+    }
+
+    .filter {
+        width: 700px;
     }
 }
